<resources>
    <string name="app_name">PRECIOUS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="storage_permission_warning">The app will not work without the permission, please activate it in Settings->Apps->PRECIOUS->Permissions</string>
    <string name="ob_intro1">Precious is all about helping you to get more of what you want out of life.</string>
    <string name="ob_intro2">Whether you want to have more fun, stay healthy, challenge yourself, or something completely different, Precious can help you get there.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="re_enter_pass">Repeat password:</string>
    <string name="nickname">Nickname:</string>
    <string name="group_id">GroupID:</string>
    <string name="gender">Gender:</string>
    <string name="gender_hint">male/female</string>
    <string name="weight">Weight:</string>
    <string name="weight_not_available">Unable to calculate calories without knowing you weight, you have to register/login first</string>
    <string name="height">Height:</string>
    <string name="date_of_birth">Year of birth:</string>
    <string name="go_back">Cancel</string>
    <string name="logged_in">You are now logged in</string>
    <string name="pass_not_match">Passwords do not match</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="gender_not_match">Gender must be either "male" or "female"</string>
    <string name="gender_empty">"Gender" field is empty, please scroll down</string>
    <string name="empty_param">One or more parameters are empty</string>
    <string name="wrong_param">One or more parameters are incorrect. Weight and heght must be in kg and cm and the minimum age to register is 15.</string>
    <string name="request_group_id">Please enter your 3-digit group ID code. If you are not taking part of the Campden BRI trials and do not have a code, please enter 123.</string>
    <string name="wrong_group_id">Wrong GroupID. If you do not have one, please write 333.</string>
    <string name="accept">Accept</string>
    <string name="not_accept">Not accept</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS OF PRECIOUS®</string>
    <string name="t_and_c_title1"> </string>
    <string name="t_and_c_content1">1. You shall not sublicense, distribute, lease, loan or otherwise convey the application or any portion thereof to anyone. You shall not modify the application, incorporate the application in whole or part in any other product or create derivative works.. You shall not reverse assemble, translate the app into another language, decompile or disassemble or otherwise reverse engineer any portion of the application. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to the PRECIOUS Project consortium.
</string>
    <string name="t_and_c_title2"> </string>
    <string name="t_and_c_content2">2. The application is not designed nor intended for use in any situation in which the failure of the application could lead to death or injury.</string>
    <string name="t_and_c_title3"> </string>
    <string name="t_and_c_content3">3. You acknowledge and agree that no medical advice is provided through the application and that you are using the application at your own risk. The application is intended for informational and educational use only and cannot be used to schedule or plan procedures, medication or supplements usage, or anything where accuracy is required. Please consult your health care provider for any health concerns. </string>
    <string name="t_and_c_title4"> </string>
    <string name="t_and_c_content4">4. In no event shall the PRECIOUS consortium be liable to you for any special, consequential, punitive, exemplary, incidental or indirect damages of any kind.
</string>
    <string name="t_and_c_title5"> </string>
    <string name="t_and_c_content5">5. The PRECIOUS application uses the following permissions:
a. Location: it is needed for linking the physical activity data with the geographical location of the user. It is also used to measure the distance when GPS is enabled and the user is walking, running or riding a bike.
b. Access to the external memory of the smart phone: it is needed for storing the information and send it to the server afterwards.
c. Camera: it is used for the digital image recognition of the food and the face size estimation.
d. Device ID: it is used to create the user ID which will allow the user to authenticate himself to the server.

</string>
    <string name="t_and_c_title6"> </string>
    <string name="t_and_c_content6">6. This agreement supersedes all previous agreements. If the agreement is updated, you will be made aware.
</string>
    <string name="t_and_c_title7"> </string>
    <string name="t_and_c_content7"> </string>
    <string name="toolbar_name">Welcome, </string>
    <string name="not_logged_in">REGISTER, PLEASE </string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Report a problem</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_outcomegoal_activity">outcomegoal_activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="report_problem_template_content">I am having problem with: \n</string>
    <string name="report_problem_template_title">Problem with PRECIOUS Android app, version </string>
    <string name="outcomegoal_title">What do I want</string>
    <string name="outcomegoal_1st_screen_title">What do I want?</string>
    <string name="outcomegoal_1st_screen_text">To help you most effectively, Precious needs to know what you really want. So, let\'s get started!</string>
    <string name="outcomegoal_1st_screen_text2">Before swiping forward, think about things that might increase your well-being and happiness.</string>
    <string name="outcomegoal_1st_screen_text2_completed">Thanks for revisiting this subapp to let PRECIOUS know about your current goals and values. </string>
    <string name="outcomegoal_2nd_screen_title">As they go through life, people want different things over time. Choose up to 4 things you would want out of your life at the moment.</string>
    <string name="outcomegoal_2nd_screen_no_selection">Please choose one behaviour, even if it isn\'t a perfect fit for you at the moment.</string>
    <string name="outcomegoal_2nd_screen_subtitle">I want to. . .</string>
    <string name="outcomegoal_goal1">face challenges</string>
    <string name="outcomegoal_goal2">have more fun</string>
    <string name="outcomegoal_goal3">lose weight</string>
    <string name="outcomegoal_goal4">stay healthy</string>
    <string name="outcomegoal_goal5">maintain functional ability</string>
    <string name="outcomegoal_goal6">compete against others</string>
    <string name="outcomegoal_goal7">learn a new skill</string>
    <string name="outcomegoal_goal8">improve general mood</string>
    <string name="outcomegoal_goal9">improve balance</string>
    <string name="outcomegoal_goal10">get physically stronger</string>
    <string name="outcomegoal_goal11">feel more healthy</string>
    <string name="outcomegoal_goal12">feel connected with other people</string>
    <string name="outcomegoal_goal13">gain recognition for accomplishments</string>
    <string name="outcomegoal_goal14">relieve stress or tension</string>
    <string name="outcomegoal_goal15">feel invigorated</string>
    <string name="outcomegoal_goal16">prevent an illness that runs in my family</string>
    <string name="outcomegoal_goal17">look more attractive</string>
    <string name="outcomegoal_goal18">increase stamina</string>
    <string name="outcomegoal_goal19">become more flexible</string>
    <string name="outcomegoal_goal20">have more energy</string>
    <string name="outcomegoal_3rd_screen">Of those that you selected, which one is the MOST important for you right now?</string>
    <string name="outcomegoal_4th_screen_title">So, you want to %1$s. Great! There are many different ways to do that. Which of these would best help you to %1$s, so that Precious can guide you on your way.</string>
    <string name="og_4th_screen_op1">Physical Activity</string>
    <string name="og_4th_screen_op2">Nutrition</string>
    <string name="og_4th_screen_op3">Sleep Patterns</string>
    <string name="og_4th_screen_op4">Stress Levels</string>
    <string name="og_4th_screen_op5">None of these</string>
    <string name="og_4th_screen_not_allowed">For the trials in Helsink the other options are not available</string>
    <string name="outcomegoal_5th_screen_no_selection">Please choose one option from the previous screen.</string>
    <string name="outcomegoal_5th_screen_feedback">Based  on your responses it seems that you think a change in your %1$s can help you to %2$s.  That\'s good to know!  Precious will now help you on the path to getting more of what you want.</string>
    <string name="imporance_ruler_title">Importance Ruler</string>
    <string name="imporance_ruler_1st_screen_title">On a scale of 1-10, how important is physical activity to you?</string>
    <string name="imporance_ruler_1st_screen_option1">Not important\nat all</string>
    <string name="imporance_ruler_1st_screen_option2">Extremely\nimportant</string>
    <string name="imporance_ruler_1st_screen_no_selection">Please choose a number in the previous screen</string>
    <string name="imporance_ruler_2nd_screen_title1">Looks like physical is already pretty important to you. Very good.\nWhy are you at %1$d and not %2$d?</string>
    <string name="imporance_ruler_2nd_screen_title2">Seems that physical activity is not very important to you right now, and that\'s perfectly OK.\nIn which of the following ways might physical activity possibly benefit you?</string>
    <string name="imporance_ruler_2nd_screen_title3">Looks like physical activity is already somewhat important to you. Nice.\nWhy are you at %1$d and not %2$d?</string>
    <string name="imporance_ruler_3rd_screen_title1">Physical activity could most help me to. . .</string>
    <string name="imporance_ruler_2nd_screen_no_selection">Please set your outcome goal first in the *What do I want?* application.</string>
    <string name="imporance_ruler_4th_screen_feedback">OK. So in other words, physical activity is important to you because it could help you to %1$s.\n PRECIOUS will keep this in mind to help support you on the way.</string>
    <string name="imporance_ruler_4th_screen_feedback2">OK. So although physical activity isn\'t very important to you, you see that it could possibly have some benefits. Namely, you think it could help you to %1$s. PRECIOUS will keep this in mind to help support you on the way.</string>
    <string name="self_monitoring_title">Mountain Climber</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tom</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
</resources>