<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:fadeScrollbars="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/terms_and_conditions"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textView12"
                android:layout_margin="7dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle1"
                android:layout_margin="5dp"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content1"
                android:id="@+id/textViewContent1"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title2"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle2"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content2"
                android:id="@+id/textViewContent2"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title3"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle3"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content3"
                android:id="@+id/textViewContent3"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title4"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle4"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content4"
                android:id="@+id/textViewContent4"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title5"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle5"
                android:layout_margin="5dp"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content5"
                android:id="@+id/textViewContent5"
                android:layout_margin="5dp"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title6"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle6"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content6"
                android:id="@+id/textViewContent6"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/t_and_c_title7"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/textViewTitle7"
                android:layout_margin="5dp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"
                android:text="@string/t_and_c_content7"
                android:id="@+id/textViewContent7"
                android:layout_margin="5dp" />

            <LinearLayout
                android:textColor="@android:color/black"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="7dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:onClick="onYesSelected"
                    android:id="@+id/button2" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_accept"
                    android:onClick="onNoSelected"
                    android:id="@+id/button3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>