<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onboarding">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="248px"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/precious_logo"
        android:layout_marginTop="@dimen/ob_logo_margin_top"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ob_intro1"
            android:id="@+id/textView15"
            android:textSize="@dimen/ob_intro_text"
            android:textAlignment="center"
            android:layout_margin="@dimen/ob_intro_text_margin"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ob_intro2"
            android:id="@+id/textView4"
            android:textSize="@dimen/ob_intro_text"
            android:textAlignment="center"
            android:layout_margin="@dimen/ob_intro_text_margin"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/ob_sign_button_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/ob_sign_button_text"
            android:layout_marginRight="@dimen/ob_sign_button_margin"
            android:text="@string/sign_up"
            android:onClick="signUp"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:textAlignment="gravity"
            android:background="@color/ob_button_background"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/ob_sign_button_text"
            android:text="@string/sign_in"
            android:onClick="signIn"
            android:id="@+id/textView6"
            android:layout_gravity="center"
            android:textAlignment="gravity"
            android:background="@color/ob_button_background"/>
    </LinearLayout>
</RelativeLayout>